testdata/bad/intWithTerminatingColon.ion
// Numbers can's be terminated by colon.
( 1247:bc )
